# ofdsdk

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_cn.md
crates/ofdsdk/: Cargo.toml
crates/ofdsdk-build/: Cargo.toml
crates/ofdsdk-build/src/: lib.rs  models.rs  sdk_code.rs  sdk_data.rs
crates/ofdsdk-build/src/models/: sdk_data.rs  xsd.rs
crates/ofdsdk-build/src/sdk_code/: deserializer.rs  parts.rs  schemas.rs  serializer.rs
crates/ofdsdk-build/src/sdk_code/parts/: helpers.rs
crates/ofdsdk-build/src/sdk_data/: compatibility.rs  context.rs  parts.rs  schema_comments.rs  schemas.rs
crates/ofdsdk-build/src/sdk_data/schemas/: codegen.rs  merge.rs  normalize.rs  traversal.rs
crates/ofdsdk-test/: Cargo.toml
crates/ofdsdk-test/benches/: document.rs  page.rs
crates/ofdsdk-test/src/: fixtures.rs
crates/ofdsdk-test/tests/: annotation.rs  annotations.rs  attachments.rs  custom_tags.rs  document.rs  extensions.rs  ofd.rs  page.rs  page_graphics.rs  parts.rs  res.rs  round_trip.rs  signature.rs  signatures.rs  version.rs
crates/ofdsdk/src/: common.rs  lib.rs  parts.rs  serializers.rs
crates/ofdsdk/src/common/: error.rs  xml.rs  zip.rs
crates/ofdsdk/src/deserializers/: annotation.rs  annotations.rs  attachments.rs  custom_tags.rs  definitions.rs  document.rs  extensions.rs  ofd.rs  page.rs  res.rs  signature.rs  signatures.rs  version.rs
crates/ofdsdk/src/parts/: annotation.rs  annotations.rs  attachment_file.rs  attachments.rs  custom_tag_file.rs  custom_tag_schema.rs  custom_tags.rs  document.rs  document_res.rs  document_res_font_file.rs  document_res_media_file.rs  extension_data_file.rs  extensions.rs  ofd_package.rs  page.rs  page_res.rs  page_res_font_file.rs  page_res_media_file.rs  public_res.rs  public_res_font_file.rs  public_res_media_file.rs  seal_file.rs  signature.rs  signature_value.rs  signatures.rs  template_page.rs  version.rs
schemas/: Annotation.xsd  Annotations.xsd  Attachments.xsd  CustomTags.xsd  Definitions.xsd  Document.xsd  Extensions.xsd  OFD.xsd  Page.xsd  Res.xsd  Signature.xsd  Signatures.xsd  Version.xsd
sdk_data/: compatibility.json
sdk_data/parts/: annotation.json  annotations.json  attachment_file.json  attachments.json  custom_tag_file.json  custom_tag_schema.json  custom_tags.json  document.json  document_res.json  document_res_font_file.json  document_res_media_file.json  extension_data_file.json  extensions.json  ofd_package.json  page.json  page_res.json  page_res_font_file.json  page_res_media_file.json  public_res.json  public_res_font_file.json  public_res_media_file.json  seal_file.json  signature.json  signature_value.json  signatures.json  template_page.json  version.json
sdk_data/schema_comments/: annotation.json  annotations.json  attachments.json  custom_tags.json  definitions.json  document.json  extensions.json  ofd.json  page.json  res.json  signature.json  signatures.json  version.json
sdk_data/schemas/: annotation.json  annotations.json  attachments.json  custom_tags.json  definitions.json  document.json  extensions.json  ofd.json  page.json  res.json  signature.json  signatures.json  version.json
(+26 files in other folders)
