[workspace]
resolver = "3"
members = ["crates/ofdsdk", "crates/ofdsdk-build", "crates/ofdsdk-test"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["KaiserY"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaiserY/ofdsdk"
documentation = "https://docs.rs/ofdsdk"
description = "Strongly typed OFD SDK for Rust"
keywords = ["ofd", "xml", "document", "parser"]
categories = ["parser-implementations"]
readme = "README.md"

[workspace.dependencies]
ofdsdk = { version = "0.1.0", path = "crates/ofdsdk" }
ofdsdk-build = { version = "0.1.0", path = "crates/ofdsdk-build" }
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
anyhow = "1.0.102"
heck = "0.5.0"
serde_json = "1.0.149"
quote = "1.0.45"
syn = "2.0.117"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
thiserror = "2.0.18"
criterion = "0.8.2"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
