[workspace]
resolver = "3"
members = ["crates/ofdsdk", "crates/ofdsdk-build", "crates/ofdsdk-test"]

[workspace.package]
version = "0.2.3"
edition = "2024"
rust-version = "1.88"
authors = ["KaiserY"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KaiserY/ofdsdk"
documentation = "https://docs.rs/ofdsdk"
description = "Strongly typed OFD SDK for Rust"
keywords = ["ofd", "xml", "document", "parser"]
categories = ["parser-implementations"]
readme = "README.md"

[workspace.dependencies]
ofdsdk = { version = "0.2.3", path = "crates/ofdsdk" }
ofdsdk-build = { version = "0.2.3", path = "crates/ofdsdk-build" }
ofdsdk-test = { version = "0.2.3", path = "crates/ofdsdk-test" }
quick-xml = { version = "0.41.0", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
anyhow = "1.0.103"
heck = "0.5.0"
serde_json = "1.0.150"
quote = "1.0.46"
syn = "2.0.118"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
thiserror = "2.0.18"
criterion = "0.8.2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[profile.dev]
incremental = false
