[package]
name = "ofdsdk-build"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true }
serde_derive = { workspace = true }
anyhow = { workspace = true }
heck = { workspace = true }
serde_json = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
